# example-github-actions

./: CMakeLists.txt  Dockerfile  README.md  calc.cxx
.github/: mergify.yml  release.yml
.github/workflows/: codeql-analysis.yml  publish-image.yml  publish.yml  test-binary.yml  test-build.yml  test-mergify.yml  test.yml
